--- a/index.html
+++ b/index.html
@@ -236,10 +236,11 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Python programming</h4>
+                <h4 class="h4 service-item-title">AI Engineering</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Python, Machine Learning, Deep Learning<br>
+Developing high-performance AI systems with expertise in NLP, image processing, and signal processing. Utilizing cutting-edge algorithms to create scalable, production-ready solutions.
                 </p>
               </div>
 
@@ -252,10 +253,11 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Python programming</h4>
+                <h4 class="h4 service-item-title">Natural Language Processing (NLP)</h4>
 
                 <p class="service-item-text">
-                  High-quality development of AI products at the professional level.
+                  Text Processing & Machine Learning Models<br>
+Specializing in advanced NLP techniques, building models for tasks like sentiment analysis, language understanding, and information extraction.
                 </p>
               </div>
 
@@ -268,10 +270,11 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Mobile apps</h4>
+                <h4 class="h4 service-item-title">Image and Signal Processing</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Computer Vision & Remote Sensing<br>
+Crafting sophisticated image processing algorithms for real-world applications such as satellite imagery, change detection, and object recognition, using tools like Python and MATLAB.
                 </p>
               </div>
 
@@ -284,10 +287,11 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Photography</h4>
+                <h4 class="h4 service-item-title">AI Research and Development</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Telecommunications & Signal Processing<br>
+Leading R&D efforts focused on AI innovations in telecommunications, applying theoretical and practical knowledge to solve complex problems in remote sensing and signal processing.
                 </p>
               </div>
 
